* Added find in application
* Syntax highlighting editor
  * Auto indent
  * Smart delete
  * Indent blocks
  * Comment blocks
  * Breakpoints & Tracepoints
  * Code browsing (limited support)
    Hold down ctrl and move the cursor over code, click on 
    underlined code to browse to it
  * Code completion, currently only object attributes self.*
* OGL improvements including saving of position
* Keyboard support in the Inspector and Editor
* Added Zope interface
* Fixed a lot of little bugs in the Inspector
* Added a MenuBar for the Editor
* Added About box
* Made a subset of views optional
* Added ClassLink property editor for controls linking to
  other controls
* Added FrameBars
* Added the python profiler
* Added Tim Peter's Cyclops, cycle finder
* Controls that don't accept mouse clicks 
  (wxNotebook, wxStaticLine, wxStaticBox)
  are now selectable and dragable
* Added context sensitive help (press F1 in source code)
* Added CollectionEditors
  These are new properties on components which provides 
  design-time item list maintenance.
  In the source, each Collection Editor looks after its
  own method.
  This is a rough first draft and will be refined.
  A very big gotcha with most of these collection properties
  is that they are not live. For most you will have to close 
  open and reopen the Designer for changes to take effect :(
  Please note that whitespace is even more meaningful
  than usual ;) So leave generated code as is!
  The following have been implemented to various degrees:
  * wxListCtrl.Columns
  * wxStatusBar.Fields
  * wxImageList.Images (plus image enabled editor)
  * wxNotebook.Pages
  * wxWindow.Constraints
  * wxToolBar.Tools (plus EVT_TOOL)
  * wxMenuBar.Menus 
  * wxMenu.Items (plus EVT_MENU)
  Still to be implemented:
  * wxAcceleratorTable.Entries (broken, doesn't fit yet)
  * wxBoxSizers, wxStaticBoxSizer
* Directory compare (lib's cmp) and diff facilities (Tim Peter's ndiff)

-- 0.0.3 --

00-01-06